--- a/templates/FrontEnd/EditerUnContrat.html.twig
+++ b/templates/FrontEnd/EditerUnContrat.html.twig
@@ -10,6 +10,16 @@
     </a>
 </div>
 
+{% set pile = app.session.get('pile_de_pdf_dans_public', []) %}
+<h3>Contenu de la pile PDF :</h3>
+<ul>
+    {% for path in pile %}
+        <li>{{ path }}</li>
+    {% else %}
+        <li><em>(pile vide)</em></li>
+    {% endfor %}
+</ul>
+
 {{ form_start(form) }}
 
 <div style="" class="p-2">
