--- a/templates/FrontEnd/voirUnContrat.html.twig
+++ b/templates/FrontEnd/voirUnContrat.html.twig
@@ -24,6 +24,17 @@
     </a>
 </div>
 
+{% set pile = app.session.get('pile_de_pdf_dans_public', []) %}
+<h3>Contenu de la pile PDF :</h3>
+<ul>
+    {% for path in pile %}
+        <li>{{ path }}</li>
+    {% else %}
+        <li><em>(pile vide)</em></li>
+    {% endfor %}
+</ul>
+
+
 {% if employe %}
 {# <a href="{{ path( 'app_supprimer_un_contrat', { id: contrat.id } ) }}" class="btn btn-outline-light btn-sm mt-4">Supprimer</a> #}
 
@@ -74,6 +85,8 @@
 </script>
 
 {% endif %}
+
+<a href="{{ path('app_afficher_fac') }}">FAC</a>
 
 <div class="container my-5">
     <div class="row justify-content-center">
