La logique de l'ajout d'un commentaire semble fonctionner. Tout début de l'affichage du contenu d'une FAC.

--- a/templates/FrontEnd/AfficherFAC.html.twig
+++ b/templates/FrontEnd/AfficherFAC.html.twig
@@ -14,4 +14,10 @@
 </form>
 
 
+{% for publication in listePublications %}
+    {{publication.titre}}<br>
+    {{publication.contenu}}<br>
+{% endfor %}
+
+
 {% endblock %}
