--- a/templates/FrontEnd/AjouterUnCommentaire.html.twig
+++ b/templates/FrontEnd/AjouterUnCommentaire.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ajouter une publication{% endblock %}
+{% block title %}Ajouter un commentaire{% endblock %}
 
 {% block body %}
 <div class="d-flex justify-content-end position-fixed top-0 end-0 m-3">
@@ -11,8 +11,7 @@
 
 {{ form_start(form) }}
 <div style="" class="p-2">
-    {{ form_row( form.titre ) }}
-    {{ form_row( form.contenu ) }}
+    {{ form_row( form.texte ) }}
     {{ form_row( form.legende ) }}
     {{ form_row( form.photo ) }}
     {{ form_row( form.submit ) }}
